# agent-memory

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD_LOG.md  CLAUDE.md  DECISION_LOG.md  FEATURES.md  IMPLEMENTATION.md  INTAKE.md  NFR_UX.md  PRD.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.kodos/: ctx-9141aa12-5f7b-4239-9e8f-6432142cd534.json  learnings.json  runtime.json  state.json
.kodos/evidence/F10/: observation-inline-report.md  observation-roster-report.md
.kodos/evidence/F11/: observation-1-kb-log.txt  observation-1-mem-usage.txt  observation-1-task.md
.kodos/evidence/walkthrough/: closeout-walkthrough.txt  wave4-walkthrough.txt  (+2 more)
discovery/: checklist.json
research/: architecture-review-2026-07-21.md  backend-research.md  dedup-calibration.md  dedup_calibration.py  okf-spec-v0.1.md
research/plan-review-2026-07-21/: adversarial-codex.md  feasibility-claude.md  scope-antigravity.md
scripts/: agent-memory-backup
skills/extract/: SKILL.md
src/agent_memory/: __init__.py  __main__.py  blocks.py  cli.py  config.py  doctor.py  extract.py  fusion.py  gitkb.py  graph.py  initcmd.py  lexical.py  okf.py  ollama.py  reindex.py  search.py  store.py  vector.py
tests/: conftest.py  f12_netns_driver.py  test_f10_procedure.py  test_f12_egress.py  test_f1_init_doctor.py  test_f2_capture.py  test_f3_search.py  test_f4_semantic.py  test_f5_graph.py  test_f6_fusion.py  test_f7_concurrency.py  test_f8_external_edits.py  test_f9_extract.py  test_okf_interop.py  test_preflight.py
tests/egress_guard/: sitecustomize.py
(+3 files in other folders)
