[project]
name = "agent-memory"
version = "0.1.0"
description = "Personal cross-agent knowledge base: OKF markdown source of truth + local vector + derived graph, RRF-fused"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
