[project]
name = "agent-memory"
version = "0.1.0"
description = "Personal cross-agent knowledge base: OKF markdown source of truth + local vector + derived graph, RRF-fused"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6"]

[project.scripts]
mem = "agent_memory.cli:run"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["uv_build>=0.7.0,<1.0.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
